--- a/front-end/Android/app/src/main/res/layout/fragment_search.xml
+++ b/front-end/Android/app/src/main/res/layout/fragment_search.xml
@@ -15,7 +15,8 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+        app:layout_constraintTop_toTopOf="parent">
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout2"
