--- a/front-end/Android/app/src/main/res/layout/card_search.xml
+++ b/front-end/Android/app/src/main/res/layout/card_search.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/fsi_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:checkable="true"
