--- a/front-end/Android/app/src/main/res/values/colors.xml
+++ b/front-end/Android/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <!-- Kindit's Color-->
     <color name="inputTextBoxColor">#F3F3F3</color>
     <color name="DividerLineColor">#EDEDED</color>
+    <color name="menuDividerLineColor">#808080</color>
 
     <color name="ratingOnColor">#ffef8b</color>
     <color name="ratingOffColor">#33000000</color>
