--- a/front-end/Android/app/src/main/res/xml/network_security_config.xml
+++ b/front-end/Android/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">203.241.228.109</domain>
+        <domain includeSubdomains="true">119.202.76.45</domain>
     </domain-config>
 </network-security-config>
