--- a/front-end/Android/app/src/main/res/layout/fragment_encyclopedia.xml
+++ b/front-end/Android/app/src/main/res/layout/fragment_encyclopedia.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-    android:layout_marginTop="?attr/actionBarSize">
+        android:layout_height="wrap_content">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
@@ -41,43 +40,50 @@
 
     </com.google.android.material.tabs.TabLayout>
 
-        <Button
-            android:id="@+id/btn_ranking"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="#랭킹순"
-            app:layout_constraintEnd_toStartOf="@+id/btn_new"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
+    <Button
+        android:id="@+id/btn_ranking"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/myself_custom_round_btn_grey"
+        android:text="@string/en_tv_rank"
+        android:textColor="@android:color/black"
+        app:layout_constraintEnd_toStartOf="@+id/btn_new"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_new" />
 
-        <Button
-            android:id="@+id/btn_new"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="#최신순"
-            app:layout_constraintEnd_toStartOf="@+id/btn_views"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/btn_ranking"
-            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
+    <Button
+        android:id="@+id/btn_new"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/en_tv_new"
+        android:textColor="@android:color/black"
+        android:background="@drawable/myself_custom_round_btn_grey"
+        app:layout_constraintEnd_toStartOf="@+id/btn_views"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/btn_ranking"
+        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
 
         <Button
             android:id="@+id/btn_views"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="#조회순"
+            android:text="@string/en_tv_view"
+            android:textColor="@android:color/black"
+            android:background="@drawable/myself_custom_round_btn_grey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_new"
             app:layout_constraintTop_toTopOf="@+id/btn_ranking" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/pager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
