--- a/front-end/Android/app/src/main/res/layout/header.xml
+++ b/front-end/Android/app/src/main/res/layout/header.xml
@@ -24,30 +24,33 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="50dp"
-        android:src="@drawable/pepe" />
+        android:layout_marginStart="30dp"
+        android:src="@drawable/background" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="15dp">
 
         <TextView
             android:id="@+id/tv_profileName"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:text="OOO님"
             android:textColor="@color/design_default_color_on_secondary"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:scaleType="centerCrop"
+            android:id="@+id/ibtn_modify"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:backgroundTint="@android:color/transparent"
-            android:src="@drawable/ic_outline_edit_24" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/setting_shape_edit" />
 
     </LinearLayout>
     <View
