--- a/front-end/Android/app/src/main/res/layout/activity_main.xml
+++ b/front-end/Android/app/src/main/res/layout/activity_main.xml
@@ -40,21 +40,27 @@
             android:id="@+id/contentContainer"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:paddingBottom="56dp"
             app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"></FrameLayout>
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigation"
-            android:layout_width="0dp"
-            android:layout_height="54dp"
+            android:layout_width="match_parent"
+            android:theme="@style/BottomTheme"
+            android:layout_height="56dp"
             android:layout_gravity="bottom"
-            android:alpha="0.7"
-            app:itemBackground="@color/BottomNavigationView_bg_color"
-            app:itemIconSize="24dp"
-            app:labelVisibilityMode="selected"
-            app:layout_behavior="tech.thdev.app.view.BottomNavigationBehavior"
+            android:elevation="16dp"
+            app:itemIconSize="28dp"
+            app:itemIconTint="@drawable/menu_selector_color"
+            app:itemTextColor="@drawable/menu_selector_color"
+            app:itemTextAppearanceActive="@style/BottomNavigationView.Active"
+            app:itemTextAppearanceInactive="@style/BottomNavigationView"
+            android:background="@android:color/white"
+            app:itemRippleColor="@android:color/transparent"
+            app:labelVisibilityMode="labeled"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
