chores: 커뮤니티 상세정보 구현 완료

--- a/front-end/Android/app/src/main/res/layout/activity_community_write.xml
+++ b/front-end/Android/app/src/main/res/layout/activity_community_write.xml
@@ -17,7 +17,7 @@
         app:srcCompat="@drawable/back" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/cw_tv_upload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
