fix: 커뮤니티쪽 사진업로드 안되는거 버그 픽스

--- a/front-end/Android/app/src/main/res/layout/activity_kindit_login.xml
+++ b/front-end/Android/app/src/main/res/layout/activity_kindit_login.xml
@@ -67,9 +67,10 @@
         android:backgroundTint="@color/kinditMainColor1"
         android:ems="10"
         android:hint="@string/password"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:maxLines="1"
         android:shadowColor="@color/kinditMainColor1"
+        android:text="!Msno2"
         android:textColorHighlight="@color/kinditMainColor1"
         android:textColorLink="@color/kinditMainColor1"
         app:layout_constraintBottom_toTopOf="@+id/kl_btn_login"
@@ -99,6 +100,7 @@
         android:hint="@string/email"
         android:inputType="text"
         android:maxLines="1"
+        android:text="msno2@naver.com"
         app:layout_constraintBottom_toTopOf="@+id/textView10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
